# Vole-Machine-Simulator

./: CMakeLists.txt  Instructions.cpp  Instructions.h  Instructions.txt  Main  Memory.cpp  Memory.h  README.md  Register.cpp  Register.h  Report UX for PSV Studio.txt  Run.cpp  VoleMachine.cpp  VoleMachine.h  VoleMachineQT.cpp  Vole_Machine_Simulator.json  phishing.txt
